--- a/files/en-us/mozilla/firefox/releases/93/index.html
+++ b/files/en-us/mozilla/firefox/releases/93/index.html
@@ -60,6 +60,7 @@ tags:
 <ul>
   <li>{{domxref("ElementInternals.shadowRoot")}} and {{domxref("HTMLElement.attachInternals")}} are now supported ({{bug(1723521)}}).</li>
   <li>The value <code>device-pixel-content-box</code> is now supported for {{domxref("ResizeObserver.Observe()")}} ({{bug(1587973)}}).</li>
+  <li>The {{domxref("reportError()")}} global function is now supported, allowing scripts to report errors to the console or global event handlers, emulating an uncaught JavaScript exception ({{bug(1722448)}}).</li>
 </ul>
 
 <h4 id="DOM">DOM</h4>
