Make crypto a global property

--- a/files/en-us/mozilla/firefox/releases/35/index.html
+++ b/files/en-us/mozilla/firefox/releases/35/index.html
@@ -85,7 +85,7 @@ tags:
  <li>An experimental implementation of {{domxref("AbortablePromise")}}, a promise that can be aborted by a different entity that the one who created it, has been added. It is prefixed with <code>Moz</code> and controlled by the <code>dom.abortablepromise.enabled</code>property, defaulting to <code>false</code> ({{bug(1035060)}}).</li>
  <li>The non-standard {{domxref("Navigator.mozIsLocallyAvailable")}} property has been removed ({{bug(1066826)}}).</li>
  <li>The preference <code>network.websocket.enabled,</code> <code>true</code> by default, has been removed; <a href="/en-US/docs/Web/API/WebSockets_API">Websocket</a> API cannot be deactivated anymore ({{bug(1091016)}}).</li>
- <li>The non-standard methods and properties of {{domxref("Window.crypto")}} have been removed ({{bug(1030963)}}). Only methods and properties defined in the standard WebCrypto API are left.</li>
+ <li>The non-standard methods and properties of {{domxref("Crypto")}} have been removed ({{bug(1030963)}}). Only methods and properties defined in the standard WebCrypto API are left.</li>
  <li>Our experimental implementation of WebGL 2.0 is going forward!
   <ul>
    <li>The {{domxref("WebGL2RenderingContext.copyBufferSubData()")}} method has been implemented ({{bug(1048668)}}).</li>
