--- a/files/en-us/learn/forms/other_form_controls/index.html
+++ b/files/en-us/learn/forms/other_form_controls/index.html
@@ -305,7 +305,7 @@ tags:
 
 <h2 id="Summary">Summary</h2>
 
-<p>As you'll have seen in the last few articles, there are a lot of different types of form elements are available. You don't need to remember all of these details at once, and can return to these articles as often as you like to check up on details.</p>
+<p>As you'll have seen in the last few articles, there are many different types of form control. You don't need to remember all of these details at once, and can return to these articles as often as you like to check up on details.</p>
 
 <p>Now that you have a grasp of the HTML behind the different available form controls, we'll take a look at <a href="/en-US/docs/Learn/Forms/Styling_web_forms">Styling them</a>.</p>
 
