--- a/files/en-us/learn/forms/other_form_controls/index.html
+++ b/files/en-us/learn/forms/other_form_controls/index.html
@@ -192,7 +192,7 @@ tags:
   &lt;option&gt;Pear&lt;/option&gt;
 &lt;/datalist&gt;</pre>
 
-<p>{{EmbedLiveSample("Autocomplete_basic_example", 120, 120)}}</p>
+ <p>{{EmbedLiveSample("Basic_example_2", 120, 120)}}</p>
 
 <h4 id="Datalist_support_and_fallbacks">Datalist support and fallbacks</h4>
 
