--- a/files/en-us/learn/forms/other_form_controls/index.html
+++ b/files/en-us/learn/forms/other_form_controls/index.html
@@ -175,7 +175,7 @@ tags:
 
 <p>Once a data list is affiliated with a form widget, its options are used to auto-complete text entered by the user; typically, this is presented to the user as a drop-down box listing possible matches for what they've typed into the input.</p>
 
-<h4>Autocomplete Basic example</h4>
+<h4>Basic example</h4>
 
 <p>Let's look at an example.</p>
 
