--- a/files/en-us/learn/forms/other_form_controls/index.html
+++ b/files/en-us/learn/forms/other_form_controls/index.html
@@ -36,7 +36,7 @@ tags:
 
 <p>This renders like so:</p>
 
-<p>{{EmbedLiveSample("Multi-line_text_fields", 120, 120)}}</p>
+<p>{{EmbedLiveSample("Multi-line_text_fields", 120, 160)}}</p>
 
 <p>The main difference between a <code>&lt;textarea&gt;</code> and a regular single line text field is that users are allowed to include hard line breaks (i.e. pressing return) that will be included when the data is submitted.</p>
 
@@ -192,7 +192,7 @@ tags:
   &lt;option&gt;Pear&lt;/option&gt;
 &lt;/datalist&gt;</pre>
 
-<p>{{EmbedLiveSample("Basic_example", 120, 120)}}</p>
+ <p>{{EmbedLiveSample("Basic_example_2", 120, 120)}}</p>
 
 <h4 id="Datalist_support_and_fallbacks">Datalist support and fallbacks</h4>
 
@@ -305,7 +305,7 @@ tags:
 
 <h2 id="Summary">Summary</h2>
 
-<p>As you'll have seen in the last few articles, there are a lot of different types of available form element. You don't need to remember all of these details at once, and can return to these articles as often as you like to check up on details.</p>
+<p>As you'll have seen in the last few articles, there are many different types of form control. You don't need to remember all of these details at once, and can return to these articles as often as you like to check up on details.</p>
 
 <p>Now that you have a grasp of the HTML behind the different available form controls, we'll take a look at <a href="/en-US/docs/Learn/Forms/Styling_web_forms">Styling them</a>.</p>
 
