--- a/files/en-us/learn/server-side/express_nodejs/displaying_data/book_list_page/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/displaying_data/book_list_page/index.html
@@ -20,6 +20,7 @@ tags:
 exports.book_list = function(req, res, next) {
 
   Book.find({}, 'title author')
+    .sort({title : 1})
     .populate('author')
     .exec(function (err, list_books) {
       if (err) { return next(err); }
@@ -29,7 +30,7 @@ exports.book_list = function(req, res, next) {
 
 };</pre>
 
-<p>The method uses the model's <code>find()</code> function to return all <code>Book</code> objects, selecting to return only the <code>title</code> and <code>author</code> as we don't need the other fields (it will also return the <code>_id</code> and virtual fields). Here we also call <code>populate()</code> on <code>Book</code>, specifying the <code>author</code> field—this will replace the stored book author id with the full author details.</p>
+<p>The method uses the model's <code>find()</code> function to return all <code>Book</code> objects, selecting to return only the <code>title</code> and <code>author</code> as we don't need the other fields (it will also return the <code>_id</code> and virtual fields), and then sorts the results by the title alphabetically using the <code>find()</code> method. Here we also call <code>populate()</code> on <code>Book</code>, specifying the <code>author</code> field—this will replace the stored book author id with the full author details.</p>
 
 <p>On success, the callback passed to the query renders the <strong>book_list</strong>(.pug) template, passing the <code>title</code> and <code>book_list</code> (list of books with authors) as variables.</p>
 
@@ -43,7 +44,6 @@ block content
   h1= title
 
   ul
-    - book_list.sort(function(a, b) {let textA = a.title.toUpperCase(); let textB = b.title.toUpperCase(); return (textA &lt; textB) ? -1 : (textA &gt; textB) ? 1 : 0;});
     each book in book_list
       li
         a(href=book.url) #{book.title}
@@ -52,7 +52,7 @@ block content
     else
       li There are no books.</pre>
 
-<p>The view extends the <strong>layout.pug</strong> base template and overrides the <code>block</code> named '<strong>content</strong>'. The <code>book_list</code> is first sorted alphabetically with the inline JavaScript <code>array.sort()</code> function. It then displays the <code>title</code> we passed in from the controller (via the <code>render()</code> method) and iterates through the <code>book_list</code> variable using the <code>each</code>-<code>in</code>-<code>else</code> syntax. A list item is created for each book displaying the book title as a link to the book's detail page followed by the author name. If there are no books in the <code>book_list</code> then the <code>else</code> clause is executed, and displays the text 'There are no books.'</p>
+<p>The view extends the <strong>layout.pug</strong> base template and overrides the <code>block</code> named '<strong>content</strong>'. It displays the <code>title</code> we passed in from the controller (via the <code>render()</code> method) and iterates through the <code>book_list</code> variable using the <code>each</code>-<code>in</code>-<code>else</code> syntax. A list item is created for each book displaying the book title as a link to the book's detail page followed by the author name. If there are no books in the <code>book_list</code> then the <code>else</code> clause is executed, and displays the text 'There are no books.'</p>
 
 <div class="notecard note">
 <p><strong>Note:</strong> We use <code>book.url</code> to provide the link to the detail record for each book (we've implemented this route, but not the page yet). This is a virtual property of the <code>Book</code> model which uses the model instance's <code>_id</code> field to produce a unique URL path.</p>
