Prepare for Markdown migration

--- a/files/en-us/web/accessibility/an_overview_of_accessible_web_applications_and_widgets/index.html
+++ b/files/en-us/web/accessibility/an_overview_of_accessible_web_applications_and_widgets/index.html
@@ -43,7 +43,7 @@ tags:
 <p>ARIA enables developers to describe their widgets in more detail by adding special attributes to the markup. Designed to fill the gap between standard HTML tags and the desktop-style controls found in dynamic web applications, ARIA provides roles and states that describe the behavior of most familiar UI widgets.</p>
 
 <div class="warning">
-<p>Many of these were later added in HTML5, and <strong>developers should always prefer using the correct semantic HTML element over using ARIA</strong>.</p>
+  <p><strong>Warning:</strong> Many of these were later added in HTML5, and <strong>developers should always prefer using the correct semantic HTML element over using ARIA</strong>.</p>
 </div>
 
 <p>The ARIA specification is split up into three different types of attributes: roles, states, and properties. Roles describe widgets that aren't otherwise available in HTML 4, such as sliders, menu bars, tabs, and dialogs. Properties describe characteristics of these widgets, such as if they are draggable, have a required element, or have a popup associated with them. States describe the current interaction state of an element, informing the assistive technology if it is busy, disabled, selected, or hidden.</p>
