Minor fix for consistency

--- a/files/en-us/web/accessibility/aria/annotations/index.html
+++ b/files/en-us/web/accessibility/aria/annotations/index.html
@@ -175,7 +175,7 @@ ins, [role="insertion"], del, [role="deletion"] {
 &lt;/div&gt;</pre>
 
 <div class="note">
-  <p><strong>Note</strong>: If for some reason you can’t use the <code>&lt;mark&gt;</code> element in your application, you could also use <code>&lt;span role="mark"&gt;&lt;/span&gt;</code>.</p>
+  <p><strong>Note:</strong> If for some reason you can’t use the <code>&lt;mark&gt;</code> element in your application, you could also use <code>&lt;span role="mark"&gt;&lt;/span&gt;</code>.</p>
 </div>
 
 <p>Since <code>aria-details</code> can now accept multiple IDs, we can associate multiple comments with the same annotation, like so:</p>
