Prepare for Markdown migration
Updated Using_the_alert_role for MD migration.

--- a/files/en-us/web/accessibility/aria/aria_techniques/using_the_alert_role/index.html
+++ b/files/en-us/web/accessibility/aria/aria_techniques/using_the_alert_role/index.html
@@ -49,7 +49,9 @@ tags:
  <li>Screen magnifiers may visually indicate that an alert occurred and what the alert text was. </li>
 </ul>
 
-<div class="note"><strong>Note:</strong> Opinions may differ on how assistive technology should handle this technique. The information provided above is one of those opinions and therefore not normative.</div>
+<div class="note">
+  <p><strong>Note:</strong> Opinions may differ on how assistive technology should handle this technique. The information provided above is one of those opinions and therefore not normative.</p>
+</div>
 
 <h3 id="Examples">Examples</h3>
 
@@ -134,7 +136,7 @@ document.getElementById("expirationWarning").className = ""; </pre>
 
 <h3 id="Compatibility">Compatibility</h3>
 
-<p class="comment">TBD: Add support information for common UA and AT product combinations</p>
+<p>TBD: Add support information for common UA and AT product combinations</p>
 
 <h3 id="Additional_resources">Additional resources</h3>
 
