--- a/files/en-us/web/accessibility/aria/aria_techniques/using_the_aria-required_attribute/index.html
+++ b/files/en-us/web/accessibility/aria/aria_techniques/using_the_aria-required_attribute/index.html
@@ -8,9 +8,11 @@ tags:
 ---
 <h3 id="Description">Description</h3>
 
-<p><span class="seoSummary">The <a href="https://www.w3.org/TR/wai-aria/#aria-required"><code>aria-required</code></a> attribute is used to indicate that user input is required on an element before a form can be submitted. This attribute can be used with any typical HTML form element; it is not limited to elements that have an ARIA <code>role</code> assigned.</span></p>
+<p>The <a href="https://www.w3.org/TR/wai-aria/#aria-required"><code>aria-required</code></a> attribute is used to indicate that user input is required on an element before a form can be submitted. This attribute can be used with any typical HTML form element; it is not limited to elements that have an ARIA <code>role</code> assigned.</p>
 
-<div class="note"><p><strong>Note:</strong> HTML also specifies the <a href="/en-US/docs/Web/HTML/Attributes/required"><code>required</code></a> attribute which is supported well in user agents. Use <code>aria-required</code> for backwards compatibility only.</p></div>
+<div class="note">
+  <p><strong>Note:</strong> HTML also specifies the <a href="/en-US/docs/Web/HTML/Attributes/required"><code>required</code></a> attribute which is supported well in user agents. Use <code>aria-required</code> for backwards compatibility only.</p>
+</div>
 
 <h3 id="Value">Value</h3>
 
