--- a/files/en-us/web/accessibility/aria/aria_techniques/using_the_aria-orientation_attribute/index.html
+++ b/files/en-us/web/accessibility/aria/aria_techniques/using_the_aria-orientation_attribute/index.html
@@ -6,7 +6,7 @@ tags:
   - Accessibility
   - Attribute
 ---
-<p><span class="seoSummary">The <a href="https://www.w3.org/TR/wai-aria/#aria-orientation" rel="external">aria-orientation</a> attribute is used to indicate whether an element is oriented horizontally or vertically.</span></p>
+<p>The <a href="https://www.w3.org/TR/wai-aria/#aria-orientation">aria-orientation</a> attribute is used to indicate whether an element is oriented horizontally or vertically.</p>
 
 <h3 id="Value">Value</h3>
 
