--- a/files/en-us/web/accessibility/aria/aria_techniques/using_the_aria-valuenow_attribute/index.html
+++ b/files/en-us/web/accessibility/aria/aria_techniques/using_the_aria-valuenow_attribute/index.html
@@ -6,7 +6,7 @@ tags:
   - Accessibility
   - NeedsContent
 ---
-<p><span class="seoSummary">The <a href="https://www.w3.org/TR/wai-aria/states_and_properties#aria-valuenow" rel="external">aria-valuenow</a> attribute is used to define the current value for a range widget such as a slider, spinbutton or progressbar. If the current value is not known, the author should not set the <code>aria-valuenow</code> attribute. If the <code>aria-valuenow</code> has a known minimum and maximum value, authors should set the <a href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_aria-valuemin_attribute"><code>aria-valuemin</code></a> and <a href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_aria-valuemax_attribute"><code>aria-valuemax</code></a> attributes.</span></p>
+<p>The <a href="https://www.w3.org/TR/wai-aria/states_and_properties#aria-valuenow">aria-valuenow</a> attribute is used to define the current value for a range widget such as a slider, spinbutton or progressbar. If the current value is not known, the author should not set the <code>aria-valuenow</code> attribute. If the <code>aria-valuenow</code> has a known minimum and maximum value, authors should set the <a href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_aria-valuemin_attribute"><code>aria-valuemin</code></a> and <a href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_aria-valuemax_attribute"><code>aria-valuemax</code></a> attributes.</p>
 
 <p>When the rendered value cannot be accurately represented as a number, authors <strong>SHOULD</strong> use the <a class="property-reference" href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_aria-valuetext_attribute"><code>aria-valuetext</code></a> attribute in conjunction with <code>aria-valuenow</code> to provide a user-friendly representation of the range's current value. For example, a slider may have rendered values of <code>small</code>, <code>medium</code>, and <code>large</code>. In this case, the values of <code>aria-valuenow</code> could range from 1 through 3, which indicate the position of each value in the value space, but the <a class="property-reference" href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_aria-valuetext_attribute"><code>aria-valuetext</code></a> would be one of the strings: <code>small</code>, <code>medium</code>, or <code>large</code>.</p>
 
@@ -22,7 +22,9 @@ tags:
 
 <p>For elements with role <a class="role-reference" href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_slider_role"><code>slider</code></a> and <a class="role-reference" href="/en-US/docs/Web/Accessibility/ARIA/ARIA_Techniques/Using_the_spinbutton_role"><code>spinbutton</code></a>, assistive technologies <strong>SHOULD</strong> render the actual value to users.</p>
 
-<div class="note"><p><strong>Note:</strong> Opinions may differ on how assistive technology should handle this technique. The information provided above is one of those opinions and therefore not normative.</p></div>
+<div class="note">
+  <p><strong>Note:</strong> Opinions may differ on how assistive technology should handle this technique. The information provided above is one of those opinions and therefore not normative.</p>
+</div>
 
 <h3 id="Examples">Examples</h3>
 
