--- a/files/en-us/web/media/images/aspect_ratio_mapping/index.html
+++ b/files/en-us/web/media/images/aspect_ratio_mapping/index.html
@@ -38,7 +38,7 @@ tags:
 
 <p>Mozilla then <a href="https://github.com/WICG/intrinsicsize-attribute/issues/16">brought the idea up in the WICG community group</a> and discussed it further until representatives from Chrome were onboard with the idea.</p>
 
-<p>Due to this work, browsers are working on adding a new mechanism for sizing images before the actual image is loaded.
+<p>Due to this work, browsers have implemented a mechanism for sizing images before the actual image is loaded.
   The {{cssxref("aspect-ratio")}} property that applies to replaced elements, and other related elements that accept <code>width</code> and <code>height</code> attributes.
   This appears in the browser's internal UA stylesheet, similar to the following:</p>
 
