FF94 Relnote: enterkeyhint supported

--- a/files/en-us/mozilla/firefox/releases/94/index.html
+++ b/files/en-us/mozilla/firefox/releases/94/index.html
@@ -39,6 +39,10 @@ tags:
 
 <h4 id="DOM">DOM</h4>
 
+<ul>
+  <li>Developers can now provide a hint for the enter key label/icon used on virtual keyboards, using either <a href="/en-US/docs/Web/API/HTMLElement/enterkeyhint"><code>HTMLElement.enterkeyhint</code></a> or the global attribute <a href="/en-US/docs/Web/HTML/Global_attributes/enterkeyhint"><code>enterkeyhint</code></a> ({{bug(1648332)}}).</li>
+</ul>
+
 <h4 id="Media_WebRTC_and_Web_Audio">Media, WebRTC, and Web Audio</h4>
 
 <h4 id="removals_media">Removals</h4>
