Update "Anatomy of an HTML document" section
I added <p> element to "Anatomy of an HTML document" section.

--- a/files/en-us/learn/html/introduction_to_html/getting_started/index.html
+++ b/files/en-us/learn/html/introduction_to_html/getting_started/index.html
@@ -495,6 +495,7 @@ textarea.onkeyup = function(){
  <li><code>&lt;meta charset="utf-8"&gt;</code>: This element specifies the character set for your document to UTF-8, which includes most characters from the vast majority of human written languages. With this setting, the page can now handle any textual content it might contain. There is no reason not to set this, and it can help avoid some problems later.</li>
  <li><code>&lt;title&gt;&lt;/title&gt;</code>: The {{htmlelement("title")}} element. This sets the title of the page, which is the title that appears in the browser tab the page is loaded in. The page title is also used to describe the page when it is bookmarked.</li>
  <li><code>&lt;body&gt;&lt;/body&gt;</code>: The {{htmlelement("body")}} element. This contains <em>all</em> the content that displays on the page, including text, images, videos, games, playable audio tracks, or whatever else.</li>
+ <li><code>&lt;p&gt;&lt;/p&gt;</code>: The {{htmlelement("p")}} element. This element defines a paragraph.</li>
 </ol>
 
 <h3 id="Active_learning_Adding_some_features_to_an_HTML_document">Active learning: Adding some features to an HTML document</h3>
