firefox 93 release notes

--- a/files/en-us/mozilla/firefox/releases/92/index.html
+++ b/files/en-us/mozilla/firefox/releases/92/index.html
@@ -9,7 +9,7 @@ tags:
 ---
 <p>{{FirefoxSidebar}}</p>
 
-<p class="summary">This article provides information about the changes in Firefox 92 that will affect developers. Firefox 92 is was released on September 7, 2021.</p>
+<p class="summary">This article provides information about the changes in Firefox 92 that will affect developers. Firefox 92 was released on September 7, 2021.</p>
 
 <div class="note notecard">
   <h4>Note</h4>
