--- a/files/en-us/mozilla/firefox/releases/95/index.html
+++ b/files/en-us/mozilla/firefox/releases/95/index.html
@@ -1,15 +1,15 @@
 ---
-title: Firefox 94 for developers
-slug: Mozilla/Firefox/Releases/94
+title: Firefox 95 for developers
+slug: Mozilla/Firefox/Releases/95
 tags:
-  - '94'
+  - '95'
   - Firefox
   - Mozilla
   - Release
 ---
 <p>{{FirefoxSidebar}}{{draft}}</p>
 
-<p class="summary">This article provides information about the changes in Firefox 94 that will affect developers. Firefox 94 is the current <a href="https://www.mozilla.org/en-US/firefox/channel/desktop/#beta">Beta version of Firefox</a>, and will ship on <a href="https://wiki.mozilla.org/RapidRelease/Calendar#Future_branch_dates">November 1, 2021</a>.</p>
+<p class="summary">This article provides information about the changes in Firefox 95 that will affect developers. Firefox 95 is the current <a href="https://www.mozilla.org/en-US/firefox/channel/desktop/#nightly">Nightly version of Firefox</a>, and will ship on <a href="https://wiki.mozilla.org/RapidRelease/Calendar#Future_branch_dates">December 7, 2021</a>.</p>
 
 <h2 id="Changes_for_web_developers">Changes for web developers</h2>
 
@@ -60,4 +60,4 @@ tags:
 
 <h2 id="Older_versions">Older versions</h2>
 
-<p>{{Firefox_for_developers(93)}}</p>
+<p>{{Firefox_for_developers(94)}}</p>
