--- a/files/en-us/mozilla/add-ons/webextensions/interact_with_the_clipboard/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/interact_with_the_clipboard/index.html
@@ -21,7 +21,7 @@ tags:
 <p><strong>Note:</strong> The {{domxref("Clipboard", "navigator.clipboard")}} API is a recent addition to the specification and may not be fully implemented in all browsers. This article describes some limitations, but be sure to review the compatibility tables for each method before using them to ensure that the API supports your needs.</p>
 </div>
 
-<p>The difference between the two APIs is that {{{domxref("Document.execCommand()","document.execCommand")}} this is analogous to the keyboard copy, cut, and paste actions – exchanging data between a webpage and clipboard – whereas {{domxref("Clipboard", "navigator.clipboard")}} writes and reads arbitrary data to and from the clipboard.</p>
+<p>The difference between the two APIs is that {{domxref("Document.execCommand()","document.execCommand")}} this is analogous to the keyboard copy, cut, and paste actions – exchanging data between a webpage and clipboard – whereas {{domxref("Clipboard", "navigator.clipboard")}} writes and reads arbitrary data to and from the clipboard.</p>
 
 <p>{{domxref("Clipboard", "navigator.clipboard")}} provide separate methods to read or write:</p>
 <ul>
@@ -42,7 +42,7 @@ tags:
 
 <h3 id="Using_the_Clipboard_API">Using the Clipboard API</h3>
 
-<p>The Clipboard API writes arbitrary data to the clipboard from your extension. Using the API requires the permission <code>"clipboardRead"</code> or <code>"clipboardWrite"</code> in your <code>manifest.json</code> file.</p>
+<p>The Clipboard API writes arbitrary data to the clipboard from your extension in <a href="/en-US/docs/Web/Security/Secure_Contexts">secure contexts</a>. Using the API requires the permission <code>"clipboardRead"</code> or <code>"clipboardWrite"</code> in your <code>manifest.json</code> file.</p>
 
 <p>For page scripts, the <code>"clipboard-write"</code> permission needs to be requested using the Web API {{domxref("Permissions", "navigator.permissions")}}. You can check for that permission using {{domxref("Permissions.query", "navigator.permissions.query()")}}:</p>
 
@@ -127,10 +127,10 @@ browser.alarms.onAlarm.addListener(copy);</pre>
 <p>In Firefox:</p>
 
 <ul>
- <li>From version 57 onward, you can copy images to the clipboard using the {{WebExtAPIRef("clipboard.setImageData","browser.clipboard.setImageData()")}} API.</li>
- <li>Support for the Clipboard API's {{domxref("Clipboard.writeText", "navigator.clipboard.writeText()")}} method was added in Firefox 63.</li>
  <li>When using content scripts, the Clipboard API is available only for HTTPS pages. As a workaround, use messaging between your content scripts and the background script.</li>
 </ul>
+
+<p>See the <a href="#browser_compatibility">browser compatibility tables</a> for more information.</p>
 
 <h2 id="Reading_from_the_clipboard">Reading from the clipboard</h2>
 
@@ -138,7 +138,7 @@ browser.alarms.onAlarm.addListener(copy);</pre>
 
 <h3 id="Using_the_Clipboard_API_2">Using the Clipboard API</h3>
 
-<p>The Clipboard API's {{domxref("Clipboard.readText", "navigator.clipboard.readText()")}} and {{domxref("Clipboard.read", "navigator.clipboard.read()")}} methods let you read arbitrary text or binary data from the clipboard. This lets you access the data in the clipboard without pasting it into an editable element.</p>
+<p>The Clipboard API's {{domxref("Clipboard.readText", "navigator.clipboard.readText()")}} and {{domxref("Clipboard.read", "navigator.clipboard.read()")}} methods let you read arbitrary text or binary data from the clipboard in <a href="/en-US/docs/Web/Security/Secure_Contexts">secure contexts</a>. This lets you access the data in the clipboard without pasting it into an editable element.</p>
 
 <p>Once you have the <code>"clipboard-read"</code> permission from the <a href="/en-US/docs/Web/API/Permissions_API">Permissions API</a>, you can read from the clipboard easily. For example, this snippet of code fetches the text from the clipboard and replaces the contents of the element with the ID <code>"outbox"</code> with that text.</p>
 
@@ -169,6 +169,16 @@ document.querySelector("#paste").addEventListener("click", paste);</pre>
 <h3 id="Browser-specific_considerations_2">Browser-specific considerations</h3>
 
 <p>Firefox supports the <code>"clipboardRead"</code> <a href="/en-US/docs/Mozilla/Add-ons/WebExtensions/manifest.json/permissions">permission</a> from version 54 but only supports pasting into elements in <a href="/en-US/docs/Web/Guide/HTML/Editable_content">content editable mode</a>, which for content scripts only works with a {{HTMLElement("textarea")}}. For background scripts, any element can be set to content editable mode.</p>
+
+<h2 id="browser_compatibility">Browser compatibility</h2>
+
+<h3 id="navigator_clipboard">navigator.clipboard</h3>
+
+<p>{{Compat("api.Clipboard")}}</p>
+
+<h3 id="clipboard_setImageData">clipboard.setImageData</h3>
+
+<p>{{Compat("webextensions.api.clipboard")}}</p>
 
 <h2 id="See_also">See also</h2>
 
