Note on Firefox support for navigator.clipboard.write

--- a/files/en-us/mozilla/add-ons/webextensions/interact_with_the_clipboard/index.html
+++ b/files/en-us/mozilla/add-ons/webextensions/interact_with_the_clipboard/index.html
@@ -128,6 +128,7 @@ browser.alarms.onAlarm.addListener(copy);</pre>
 
 <ul>
  <li>When using content scripts, the Clipboard API is available only for HTTPS pages. As a workaround, use messaging between your content scripts and the background script.</li>
+ <li>{{domxref("Clipboard.write", "navigator.clipboard.write()")}} is not supported.</li>
 </ul>
 
 <p>See the <a href="#browser_compatibility">browser compatibility tables</a> for more information.</p>
